--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "bin": {
+    "ginit": "./index.js"
+  },
   "author": "Oladayo Olufemi Fagbemi",
   "license": "ISC",
   "dependencies": {
